# minature-ghosthack

./: CMakeLists.txt  README.md
include/: net.h  neuron.h
src/: main.cpp  net.cpp  neural-net  neuron.cpp
